--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tanstack/react-query": "^5.55.3",
+    "lucide-react": "^0.561.0",
     "next": "^15.3.7",
     "react": "^19.1.3",
     "react-dom": "^19.1.3",
