--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.10",
-    "@tanstack/react-query": "^5.55.3",
+    "@reown/appkit": "^1.8.15",
+    "@reown/appkit-adapter-wagmi": "^1.8.15",
+    "@tanstack/react-query": "^5.90.12",
     "lucide-react": "^0.561.0",
     "next": "^15.3.7",
     "react": "^19.1.3",
     "react-dom": "^19.1.3",
-    "viem": "2.38.0",
-    "wagmi": "^2.19.3"
+    "viem": "^2.38.0",
+    "wagmi": "^2.19.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
